--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="he">
 <head>
 
-	<title>רומנטיק: האתר זמנית בשיפוץ</title>
+	<title>רומנטיק: האתר זמנית בשיפוצים</title>
 	<meta charset="utf-8" />
 	<style type="text/css">
 	body {
