Removed ripple effect. Didn't resize well.

--- a/index.html
+++ b/index.html
@@ -45,15 +45,12 @@
 
 
 	</style>
-    <script src="scripts/ripple.js"></script>
 </head>
 <body>
 
 <div class="wrap_pic"><img id="header_img" src="pics/romantic.gif"/></div>
 <div class="wrap_pic">
-    <div class="ripple-wrap">
-        <img id="sunset_img" src="pics/sunset.jpg" onload="waterRipple(this);"/>
-    </div>
+    <img id="sunset_img" src="pics/sunset.jpg"/>
 </div>
 <div id="outer_text_block">
 <div id="inner_text_block">
